planarity/src/graph.h

///////////////////////////////////////////////////////////////////////////////
// Definitions for higher-order operations at the vertex, edge and graph levels
///////////////////////////////////////////////////////////////////////////////

graphP	gp_New(void);
int		gp_InitGraph(graphP theGraph, int N);
void	gp_Free(graphP *pGraph);
#define WRITE_ADJLIST   1
int		gp_Write(graphP theGraph, char *FileName, int Mode);
int		gp_AddEdge(graphP theGraph, int u, int ulink, int v, int vlink);
int		gp_SortVertices(graphP theGraph);
int		gp_Embed(graphP theGraph, int embedFlags);
/* Possible Flags for gp_Embed.  The planar and outerplanar settings are supported
   natively.  The rest require extension modules. */

#define EMBEDFLAGS_PLANAR       1
#define EMBEDFLAGS_DRAWPLANAR   (4|EMBEDFLAGS_PLANAR)